[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.23" # This crate implements a basic BIOS bootloader without any C dependencies, just Rust and inline assembly.
volatile = "0.2.6" # This crate provides a Volatile wrapper type with read and write methods. These methods internally use the read_volatile and write_volatile functions of the core library and thus guarantee that the reads/writes are not optimized away.
spin = "0.5.2" # To use a spinning mutex

[dependencies.lazy_static] # This crate provides a lazy_static! macro that defines a lazily initialized static.
version = "1.0"
features = ["spin_no_std"] # We need the spin_no_std feature, since we don’t link the standard library.
